welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:19: error: not found: value isFacingTrail
if (isFacingTrail() == false) {
    ^SlugHunting:22: error: not found: value isFacingTrail
if (isFacingTrail() == false) {
    ^